--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+@import './themes/mat-variables.scss';
+@import './themes/variables.scss';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    height: 100vh;
+    overflow: hidden;
+}
+
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif !important;
+}
+#app-content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // width: 100vw;
+    // height: 100vh;
+    overflow: auto;
+}
+
+app-dashboard-page{
+    height: 100vh;
+}
+
+.mqtt-command-bar {
+    width: 100%;
+    top: $mat-toolbar-height-desktop !important;
+    left: 0;
+    right: 0;
+    z-index: 997;
+    height: $crm-command-bar-height-desktop !important;
+    min-height: $crm-command-bar-height-desktop !important;
+
+    @media ($mat-xsmall) {
+        top: $mat-toolbar-height-mobile;
+        height: $crm-command-bar-height-mobile !important;
+        min-height: $crm-command-bar-height-mobile !important;
+    }
+
+    background-color: #f5f5f5 !important;
+}
+
+.crm-content-container {
+    // $mat-toolbar-height-desktop + $crm-command-bar-height-desktop + $crm-view-bar-height-desktop
+    // 64 + 56 + 96
+    height: calc(100vh - 216px);
+    width: 100%;
+
+    @media ($mat-xsmall) {
+        // $mat-toolbar-height-mobile + $crm-command-bar-height-mobile + $crm-view-bar-height-mobile
+        // 56 + 0 + 84
+        height: calc(100vh - 140px);
+    }
+
+    // background-color: black;
+}
