--- a/src/app/pages/dashboard-page/product-page/product-page.component.html
+++ b/src/app/pages/dashboard-page/product-page/product-page.component.html
@@ -1,32 +1,55 @@
-<table mat-table [dataSource]="dataSource" style="margin-top:12px;width: 100%;">
+<app-command-bar>
+    <div fxFlex fxLayout fxLayoutAlign="flex-end">
+        <button routerLink="/add-product" mat-button class="mqtt-command-bar-button">
+            <mat-icon>add_box</mat-icon>
+            {{ 'Agregar' }}
+        </button>
+    </div>
+</app-command-bar>
+<div class="crm-content-container" style="margin-top: 10px">
+    <div style="width: 95%;margin: 0 auto;">
+        <mat-form-field>
+            <mat-label>Busqueda</mat-label>
+            <input matInput (keyup)="filterTable($event)" >
+        </mat-form-field>
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <table mat-table [dataSource]="dataSource"
+               style="margin-top:12px;width: 100%;background-color: #fafafa !important;">
+
+            <!--- Note mat-header-cellat mat-header-cellese columns can be defined in any order.
+                  The actual rendered columns are set as a property on mat-header-celle row definition" -->
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef> No.</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.ID}} </mat-cell>
+            </ng-container>
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="description">
+                <mat-header-cell *matHeaderCellDef> Descripción</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.DESCRIPTION}} </mat-cell>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="price">
+                <mat-header-cell *matHeaderCellDef> Precio</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.PRICE}} </mat-cell>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="principalCode">
+                <mat-header-cell *matHeaderCellDef> Codigo Principal</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.PRINCIPAL_CODE}} </mat-cell>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+                <mat-header-cell *matHeaderCellDef> Symbol</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </table>
+    </div>
+</div>
