--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -32,6 +32,9 @@
                 </button>
                 <span>ABC|Educate</span>
                 <span class="example-spacer"></span>
+                <button (click)="this.logout()" mat-icon-button>
+                    <mat-icon>power_settings_new</mat-icon>
+                </button>
 
             </mat-toolbar-row>
         </mat-toolbar>
