--- a/src/app/pages/dashboard-page/dashboard-page.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-page.component.scss
@@ -9,6 +9,10 @@
     background-image: url('https://difatizapan.gob.mx/imgDirectorio/img_avatar.png');
 }
 
+.example-spacer{
+    margin-left: auto;
+}
+
 .active {
     background-color: #3f51b5;
     color: white;
