--- a/src/app/pages/dashboard-page/edit-product-page/edit-product-page.component.html
+++ b/src/app/pages/dashboard-page/edit-product-page/edit-product-page.component.html
@@ -1,3 +1,3 @@
-<app-form-product></app-form-product>
+<app-form-product (save)="this.edit($event)"  [product]="this.productEdit" ></app-form-product>
 
 
