feat: paginator and filter search

--- a/src/app/pages/dashboard-page/home-page/home-page.component.html
+++ b/src/app/pages/dashboard-page/home-page/home-page.component.html
@@ -1,1 +1,9 @@
-<p>home-page works!</p>
+<div class="crm-content-container" style="margin-top: 10px">
+    <div style="width: 95%;margin: 0 auto;">
+        <mat-card style="width: 100px;text-align: center">
+            <h4>
+                {{(this.sizeProducts)}} Products
+            </h4>
+        </mat-card>
+    </div>
+</div>
