--- a/src/app/components/option-select-modal/option-select-modal.component.html
+++ b/src/app/components/option-select-modal/option-select-modal.component.html
@@ -2,6 +2,6 @@
 <div mat-dialog-content>
 </div>
 <div mat-dialog-actions>
-    <button mat-button (click)="this.dialogRef.close(false)">No</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Si</button>
+    <button mat-button class="danger"  (click)="this.dialogRef.close(false)">No</button>
+    <button mat-button class="success" [mat-dialog-close]="true" cdkFocusInitial>Si</button>
 </div>
