--- a/src/app/components/shared/command-bar/command-bar.component.html
+++ b/src/app/components/shared/command-bar/command-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mqtt-command-bar" fxHide.xs>
+<mat-toolbar class="mqtt-command-bar">
     <mat-toolbar-row class="mqtt-command-bar-row">
         <ng-content></ng-content>
     </mat-toolbar-row>
