--- a/src/app/pages/dashboard-page/product-page/product-page.component.html
+++ b/src/app/pages/dashboard-page/product-page/product-page.component.html
@@ -71,5 +71,9 @@
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </table>
+        <mat-paginator [length]="100"
+                       [pageSize]="5"
+                       [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
     </div>
 </div>
